--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^3.0.0",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.2",
     "immer": "^10.1.3",
