`Refactor codebase with various changes across multiple files`

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test-storage": "node test-storage.js",
     "storage:setup": "node setup-storage-fixed.js",
     "storage:test": "node test-storage.js",
-    "storage:validate": "node test-storage.js"
+    "storage:validate": "node test-storage.js",
+    "test:form": "playwright test tests/form-submission.spec.ts",
+    "test:setup": "playwright test tests/auth-setup.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
