--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "storage:setup": "node setup-storage-fixed.js",
     "storage:test": "node test-storage.js",
     "storage:validate": "node test-storage.js",
-    "test:form": "playwright test tests/form-submission.spec.ts",
+    "test": "VITE_TEST_MODE=true playwright test",
+    "test:ui": "VITE_TEST_MODE=true playwright test --ui",
+    "test:debug": "VITE_TEST_MODE=true playwright test --debug",
+    "test:headed": "VITE_TEST_MODE=true playwright test --headed",
+    "test:form": "VITE_TEST_MODE=true playwright test tests/form-submission.spec.ts",
+    "test:auth": "VITE_TEST_MODE=true playwright test tests/auth.spec.ts",
+    "test:wizard": "VITE_TEST_MODE=true playwright test tests/application-wizard.spec.ts",
+    "test:enhanced": "VITE_TEST_MODE=true playwright test tests/enhanced-features.spec.ts",
+    "test:install": "playwright install",
     "test:setup": "playwright test tests/auth-setup.ts"
   },
   "dependencies": {
