feat(tests): add comprehensive application wizard tests
- Implemented tests for the complete application submission flow, including KYC, education, payment, and review steps.
- Added validation tests for required fields, NRC/passport requirements, and file uploads.
- Created helper functions to streamline test steps and improve readability.

feat(tests): set up authentication tests

- Created tests for user login and registration functionalities.
- Ensured proper redirection and validation of user inputs during authentication.

feat(tests): enhance admin application management tests

- Developed tests for enhanced features in the admin applications dashboard, including filtering, bulk operations, and export functionality.
- Verified that status updates trigger notifications and that document links are accessible.

feat(tests): implement form submission tests

- Added tests for multi-step form submissions, including file uploads and validation of success messages.
- Ensured that the application form handles user inputs correctly across multiple steps.

chore(tests): add fixture files for testing

- Included sample PDF and image files for testing file uploads.
- Created an invalid file type fixture for testing error handling.

chore(tests): set up test environment configuration

- Configured Vite for testing with appropriate environment variables and aliases.
- Extended Playwright test setup to include test user data for streamlined testing.

--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "storage:setup": "node setup-storage-fixed.js",
     "storage:test": "node test-storage.js",
     "storage:validate": "node test-storage.js",
-    "test": "VITE_TEST_MODE=true playwright test",
-    "test:ui": "VITE_TEST_MODE=true playwright test --ui",
-    "test:debug": "VITE_TEST_MODE=true playwright test --debug",
-    "test:headed": "VITE_TEST_MODE=true playwright test --headed",
-    "test:form": "VITE_TEST_MODE=true playwright test tests/form-submission.spec.ts",
-    "test:auth": "VITE_TEST_MODE=true playwright test tests/auth.spec.ts",
-    "test:wizard": "VITE_TEST_MODE=true playwright test tests/application-wizard.spec.ts",
-    "test:enhanced": "VITE_TEST_MODE=true playwright test tests/enhanced-features.spec.ts",
+    "test": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts",
+    "test:ui": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts --ui",
+    "test:debug": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts --debug",
+    "test:headed": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts --headed",
+    "test:form": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/form-submission.spec.ts",
+    "test:auth": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/auth.spec.ts",
+    "test:wizard": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/application-wizard.spec.ts",
+    "test:enhanced": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/enhanced-features.spec.ts",
     "test:install": "playwright install",
-    "test:setup": "playwright test tests/auth-setup.ts"
+    "test:setup": "playwright test --config=testing/playwright.config.ts testing/tests/auth-setup.ts",
+    "optimize:images": "node optimize-images.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
