--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.87.4",
+    "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -94,8 +95,7 @@
     "vite-plugin-pwa": "^1.0.3",
     "workbox-window": "^7.3.0",
     "zod": "^3.24.1",
-    "zustand": "^5.0.8",
-    "tesseract.js": "^5.1.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
