--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,20 @@ jobs:
         VITE_TEST_MODE: true
         VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
         VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+      continue-on-error: true
         
-    - uses: actions/upload-artifact@v4
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: playwright-report
-        path: testing/playwright-report/
+        path: playwright-report/
         retention-days: 30
+        
+    - name: Upload test videos
+      uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: test-videos
+        path: test-results/
+        retention-days: 7
