--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "build:prod": "tsc -b && NODE_ENV=production vite build --mode production",
+    "build": "tsc -b && vite build && node scripts/generate-sri.js",
+    "build:prod": "tsc -b && NODE_ENV=production vite build --mode production && node scripts/generate-sri.js",
     "build:analyze": "tsc -b && vite build --mode production && npx vite-bundle-analyzer dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
     "security-audit": "npm audit --audit-level moderate",
     "security-scan": "node security-audit.js",
+    "security-validate": "node scripts/validate-security.js",
     "install-deps": "npm install",
     "clean": "rm -rf node_modules package-lock.json",
     "setup-storage": "node setup-storage-fixed.js",
