feat: Implement multi-device session management and enhance application submission functionality
- Added scripts for applying submission fixes and managing device sessions.
- Created SQL scripts to define and enforce row-level security (RLS) policies for applications and grades.
- Developed a new component for file uploads with progress tracking.
- Implemented active sessions management UI and backend logic.
- Enhanced session management with automatic cleanup and activity tracking.
- Added tests for application submission functionality and session management.
- Removed document analysis components and ensured application stability without them.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "type-check": "tsc --noEmit",
     "storage:setup": "node setup-storage.js",
     "storage:test": "node testing/test-storage.js",
-    "security-audit": "node security-audit.js"
+    "security-audit": "node security-audit.js",
+    "session:setup": "node setup-session-management.js",
+    "session:test": "node test-session-management.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
