--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "pages/api/**/*.js": {
-      "maxDuration": 30
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
