Fix SPA routing - add fallback to index.html

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
     {
       "source": "/api/analytics/:path*",
       "destination": "/api/analytics/:path*"
+    },
+    {
+      "source": "/((?!api).*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
