--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:analyze": "tsc && vite build --mode production && npx vite-bundle-analyzer dist/stats.html",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "dev:api": "vercel dev",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug",
