--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "session:test": "node test-session-management.js",
     "microservices:setup": "node setup-microservices.js",
     "test:services": "node test-production-services.js",
-    "test:services:curl": "./test-services-curl.sh"
+    "test:services:curl": "./test-services-curl.sh",
+    "test:notifications": "playwright test tests/integration/test-notification-integration.js",
+    "verify:notifications": "node verify-notification-setup.js",
+    "test:notification-system": "node test-notification-system.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
