`Update API endpoints to use query parameter 'action' instead of path parameter for action type`

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test:services:curl": "./test-services-curl.sh",
     "test:notifications": "playwright test tests/integration/test-notification-integration.js",
     "verify:notifications": "node verify-notification-setup.js",
-    "test:notification-system": "node test-notification-system.js"
+    "test:notification-system": "node test-notification-system.js",
+    "verify:api-consolidation": "node verify-api-consolidation.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
