--- a/vercel.json
+++ b/vercel.json
@@ -32,7 +32,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https:; img-src 'self' data: blob: https://*.supabase.co https://storage.googleapis.com; frame-ancestors 'none';"
+          "value": "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https: http: *; img-src *; connect-src *; style-src 'self' 'unsafe-inline' https: http: *; font-src 'self' https: http: data: *; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: http: *;"
         },
         {
           "key": "X-Content-Type-Options",
