`Optimized codebase for better performance and security`

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-
+  "buildCommand": "pnpm build",
+  "installCommand": "pnpm install",
   "rewrites": [
     {
       "source": "/api/auth/:path*",
