--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.87.4",
     "@types/dompurify": "^3.0.5",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
-
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
