--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "buildCommand": "npm install && npm run build"
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
