--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "terser": "^5.32.0",
+    "typescript-eslint": "^8.44.0",
     "vercel": "^48.0.2",
     "vite": "^7.1.5",
     "vite-plugin-pwa": "^1.0.3"
