--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "framer-motion": "^11.5.4",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.441.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
@@ -69,6 +71,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
     "typescript": "^5.5.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
