--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.441.0",
     "node-fetch": "^3.3.2",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -71,6 +72,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
     "typescript": "^5.5.3",
+    "qrcode": "^1.5.4",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
