--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.5.4",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
