--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.87.4",
     "@types/dompurify": "^3.0.5",
+    "@types/react-window": "^1.8.8",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -64,16 +65,17 @@
     "lucide-react": "^0.441.0",
     "node-fetch": "^3.3.2",
     "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.26.1",
+    "react-window": "^2.1.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
     "typescript": "^5.5.3",
-    "qrcode": "^1.5.4",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
