--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
     "typescript": "^5.5.3",
+    "web-vitals": "^5.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
