LET CHATGPT COOK

--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "@tanstack/react-query": "^5.87.4",
     "@types/dompurify": "^3.0.5",
     "@types/react-window": "^1.8.8",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
@@ -65,6 +68,7 @@
     "lucide-react": "^0.441.0",
     "node-fetch": "^3.3.2",
     "pdf-lib": "^1.17.1",
+    "postcss": "^8.4.45",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -73,9 +77,12 @@
     "react-router-dom": "^6.26.1",
     "react-window": "^2.1.1",
     "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
     "typescript": "^5.5.3",
+    "vite": "^7.1.5",
+    "vite-plugin-pwa": "^1.0.3",
     "web-vitals": "^5.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
@@ -89,19 +96,13 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "jsdom": "^27.0.0",
-    "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10",
     "terser": "^5.32.0",
     "typescript-eslint": "^8.44.0",
     "vercel": "^48.0.2",
-    "vite": "^7.1.5",
-    "vite-plugin-pwa": "^1.0.3",
     "vitest": "^3.2.4"
   }
 }
