--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test:wizard": "playwright test tests/application-wizard.spec.ts",
     "test:enhanced": "playwright test tests/enhanced-features.spec.ts",
     "test:api": "playwright test tests/integration/api-services.spec.ts",
+    "test:unit": "vitest",
+    "test:unit:watch": "vitest --watch",
+    "test:unit:coverage": "vitest --coverage",
+    "test:api-functions": "vitest tests/api",
     "type-check": "tsc --noEmit",
     "storage:setup": "node setup-storage.js",
     "storage:test": "node testing/test-storage.js",
