--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "test:install": "playwright install",
     "test:auth": "playwright test tests/auth.spec.ts",
     "test:wizard": "playwright test tests/application-wizard.spec.ts",
+    "test:wizard:regression": "playwright test tests/e2e/wizard-regression.spec.ts",
     "test:enhanced": "playwright test tests/enhanced-features.spec.ts",
     "test:api": "playwright test tests/integration/api-services.spec.ts",
+    "test:wizard:navigation": "playwright test tests/integration/wizard-navigation.test.js",
     "test:unit": "vitest",
     "test:unit:watch": "vitest --watch",
     "test:unit:coverage": "vitest --coverage",
