--- a/netlify.toml
+++ b/netlify.toml
@@ -150,7 +150,7 @@
     X-Content-Type-Options = "nosniff"
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src *; script-src * 'unsafe-inline' 'unsafe-eval'; style-src * 'unsafe-inline'; font-src *; img-src * data:; connect-src *; frame-src *;"
+    Content-Security-Policy = "default-src *; script-src * 'unsafe-inline' 'unsafe-eval' data:; style-src * 'unsafe-inline'; font-src *; img-src * data:; connect-src *; frame-src *;"
 
 [[headers]]
   for = "/assets/*"
