--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.config.local.ts",
+    "dev:api": "node local-server.js",
+    "dev:full": "concurrently \"npm run dev:api\" \"npm run dev\"",
+    "dev:prod": "vite --config vite.config.ts",
     "dev:netlify": "netlify dev",
     "build": "tsc && vite build",
     "build:prod": "tsc && vite build --mode production",
@@ -64,10 +67,12 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.2",
     "exceljs": "^4.4.0",
+    "express": "^5.1.0",
     "framer-motion": "^11.5.4",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
@@ -102,6 +107,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
