--- a/package.json
+++ b/package.json
@@ -73,11 +73,12 @@
     "dotenv": "^17.2.2",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "framer-motion": "^11.5.4",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.441.0",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "pdf-lib": "^1.17.1",
     "postcss": "^8.4.45",
     "qrcode": "^1.5.4",
