--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite --config vite.config.local.ts",
+    "dev:prod": "vite build --config vite.config.production.ts && vite preview",
     "dev:api": "node local-server.js",
     "dev:full": "concurrently \"npm run dev:api\" \"npm run dev\"",
     "dev:prod": "vite --config vite.config.ts",
     "dev:netlify": "netlify dev",
-    "build": "tsc && vite build",
-    "build:prod": "tsc && vite build --mode production",
+    "build": "tsc && vite build --config vite.config.production.ts",
+    "build:prod": "tsc && vite build --config vite.config.production.ts --mode production",
     "build:analyze": "tsc && vite build --mode production && npx vite-bundle-analyzer dist/stats.html",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
