--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite --config vite.config.local.ts",
+    "dev": "vite --config vite.config.local.ts --port 5173",
     "dev:prod": "vite build --config vite.config.production.ts && vite preview",
     "dev:api": "node local-server.js",
     "dev:full": "concurrently \"npm run dev:api\" \"npm run dev\"",
-    "dev:prod": "vite --config vite.config.ts",
-    "dev:netlify": "netlify dev",
+    "dev:netlify": "netlify dev --port 5173",
     "build": "tsc && vite build --config vite.config.production.ts",
     "build:prod": "tsc && vite build --config vite.config.production.ts --mode production",
     "build:analyze": "tsc && vite build --mode production && npx vite-bundle-analyzer dist/stats.html",
