--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,10 @@
   command = "npm run build:prod"
   publish = "dist"
 
+[dev]
+  functionsPort = 8888
+  command = "npm run dev"
+
 [functions]
   directory = "netlify/functions"
 
