--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "jsdom": "^27.0.0",
     "terser": "^5.32.0",
     "typescript-eslint": "^8.44.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@netlify/plugin-scheduled-functions": "file:netlify/plugins/plugin-scheduled-functions"
   }
 }
